# melodix

./: .gitignore  ORIGINAL_REQUEST.md  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  UI_DESIGN_SPEC.md  create-icons.js  generate_icon.py  index.html  package-lock.json  package.json  tray.html  vite.config.ts
e2e-tests/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
meting-server/: index.js  package-lock.json  package.json  scratch_qq.js  scratch_qq2.js  scratch_qq3.js  scratch_qq5.js  scratch_qq6.js  server.js
src/: App.tsx  tray.tsx
src-tauri/: Cargo.toml  tauri.conf.json  test_tray.rs
src-tauri/binaries/: .gitkeep
src-tauri/binaries/meting-api/: README.md  ecosystem.config.js  package-lock.json  package.json  proxy.js  qq-sign.js  qrc-decrypt.js  server.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: local_music.rs  main.rs
src/api/: client.ts
src/components/: CloseConfirmModal.tsx  DownloadPanel.tsx  FavoritesPage.tsx  HomePage.tsx  LocalLibraryPage.tsx  LyricsView.tsx  PlayerBar.tsx  PlaylistView.tsx  QueuePanel.tsx  SearchPage.tsx  SettingsPage.tsx  Sidebar.tsx  TitleBar.tsx  ToastContainer.tsx  TrayMenu.tsx
src/services/: AudioEngine.ts
src/stores/: configStore.ts  downloadStore.ts  favoriteStore.ts  homeStore.ts  localLibraryStore.ts  playbackStore.ts  searchStore.ts  toastStore.ts  uiStore.ts
src/styles/: glass.css  global.css  home.css  lyrics.css  tokens.css
src/types/: playback.ts
src/utils/: colorExtractor.ts  cover.ts  lyricParser.ts  qrcDecoder.ts
(+48 files in other folders)
