[package]
name = "melodix"
version = "0.1.0"
description = "Melodix Music Player"
authors = ["Ian"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0.2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "blocking", "json"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
notify = "6"
lofty = "0.21"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
